# oath-zk-online-fairness

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  hash
data/: dummy_file.txt  temp-sign.sha256  temp_sign.sha256  test_sig  testprivkey.pem  testpubkey.pem
experiments/: audit_phase_faircheck_benchmark2026-04-03-17-30-54.txt  audit_phase_faircheck_benchmark2026-04-15-22-44-24.txt  audit_phase_faircheck_benchmark2026-04-15-22-54-15.txt  audit_phase_faircheck_benchmark2026-04-18-19-53-55.txt  audit_phase_faircheck_benchmark_IF2026-04-19-16-40-59.txt  phase3a_benchmark_2026-04-03-17-31-57.txt
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  audit_multiclass_fairness_bench.cpp  audit_phase_balanced_sample_bench.cpp  audit_phase_consistency_p2_bench.cpp  audit_phase_correctness_check_bench.cpp  audit_phase_fair_check_bench.cpp  audit_phase_fair_check_bench_CF.cpp  audit_phase_fair_check_bench_IF.cpp  audit_phase_sensitive_attr_bench.cpp  balanced_sample_unit.cpp  basic_zk.cpp  cmake_install.cmake  lowmc.cpp  nn_baseline_bench.cpp  nn_unit.cpp  ro_ram_test.cpp  service_phase_bench.cpp  sha256.cpp  unit_utils.cpp
zk-pof/: constant.cpp  fairness_metrics.cpp  fairness_zk.cpp  lr_zk.cpp  utils.cpp
